# sudoku

./: Makefile  Makefile.am  README  TODO  bootstrap  configure.ac  sudoku  sudoku.cc  sudoku.hh
grids/: metro-221
grids/demoniac/: metro-219  metro-221  metro-233
grids/easy/: metro-218  metro-222  metro-223  metro-224  metro-225  metro-226  metro-234
grids/hard/: metro-216  metro-226
grids/medium/: 20mn-980  metro-232
src/: block.hxx  error.cc  grid.cc  grid.hxx  sudoku.cc  sudoku.hh
